[package]
name = "solana-grpc-geyser"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "config-check"

[dependencies]
affinity = "0.1.2"
solana-geyser-plugin-interface = { workspace = true }
anyhow = "1.0.62"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
clap = { version = "4.3.0", features = ["derive"] }
crossbeam-channel = "0.5.8"
futures = "0.3.24"
hostname = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
humantime-serde = "1.1.1"
hyper = "1.4.1"
hyper-util = "0.1.7"
lazy_static = "1.4.0"
log = "0.4.17"
prometheus = "0.13.2"
prost-types = "0.13.3"
serde = "1.0.145"
serde_json = "1.0.86"
solana-logger = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
thiserror = "1.0.63"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "fs"] }
tokio-stream = { version = "0.1.11" }
tonic = { version = "0.12.1", features = ["gzip", "zstd", "tls", "tls-roots"] }
tonic-health = { version = "0.12.1" }
solana-grpc-proto = { workspace = true, features = ["convert", "plugin"] }

[build-dependencies]
anyhow = { version = "1.0.62" }
cargo-lock = { version = "10.0.1" }
git-version = { version = "0.3.5" }
vergen = { version = "9.0.0", features = ["build", "rustc"] }

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
