[package]
name = "solana-grpc-proto"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-geyser-plugin-interface = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
bs58 = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
prost = { version = "0.13.1" }
prost-types = { version = "0.13.3" }
prost_011 = { package = "prost", version = "0.11.9", optional = true }
serde = { workspace = true, optional = true }
solana-account-decoder = { workspace = true, optional = true }
solana-sdk = { workspace = true, optional = true }
solana-storage-proto = { workspace = true, optional = true }
solana-transaction-status = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true }
spl-token-2022 = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tonic = { version = "0.12.1", optional = true }

[dev-dependencies]
criterion = { workspace = true }
prost_011 = { package = "prost", version = "0.11.9" }
solana-storage-proto = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
protobuf-src = { workspace = true }
tonic-build = { version = "0.12.1" }

[features]
default = ["convert", "tonic", "tonic-compression"]
convert = [
    "dep:bincode",
    "dep:solana-account-decoder",
    "dep:solana-sdk",
    "dep:solana-transaction-status"
]
plugin = [
    "convert",
    "dep:solana-geyser-plugin-interface",
    "dep:base64",
    "dep:bs58",
    "dep:bytes",
    "dep:serde",
    "dep:smallvec",
    "dep:spl-token-2022",
    "dep:thiserror",
    "dep:tonic"
]
plugin-bench = ["plugin", "dep:prost_011", "dep:solana-storage-proto"]
tonic = ["dep:tonic"]
tonic-compression = ["tonic", "tonic/gzip", "tonic/zstd"]

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
