[package]
name = "solana-grpc-server"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.83"
base64 = "0.22.0"
bincode = "1.3.3"
bs58 = "0.5.1"
bytes = "1.10.0"
clap = { version = "4.5.2", features = ["cargo", "derive", "env"] }
derivative = "2.2.0"
etcd-client = "0.14.0"
futures = "0.3.30"
hostname = "0.4.0"
humantime-serde = "1.1.1"
hyper = "1.5.0"
jsonrpsee = { version = "0.24.7", features = [
    "http-client",
    "macros",
    "server",
] }
lazy_static = "1.4.0"
lru = "0.12.3"
maplit = "1.0.2"
pin-project = "1.1.5"
prometheus = "0.13.3"
prost = "0.13.3"
prost-types = "0.13.3"
quinn = "0.11.6"
quinn-proto = "0.11.6"
rand = "0.8.5"
rustls = { version = "0.23.15", default-features = false }
semver = "1.0.22"
serde = "1.0.215"
serde_json = "1.0.116"
serde_yaml = "0.9.25"
solana-client = { workspace = true }
solana-connection-cache = { workspace = true }
solana-net-utils = { workspace = true }
solana-program = { workspace = true }
solana-quic-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
solana-tpu-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-version = { workspace = true }

thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tonic = { version = "0.12.3", features = ["tls-native-roots"] }
tonic-health = "0.12.3"
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.1", features = [
    "ansi",
    "env-filter",
    "json",
] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
solana-grpc-client = { workspace = true }
solana-grpc-proto = { workspace = true }

[build-dependencies]
anyhow = "1.0.69"
cargo-lock = "10.0.1"
git-version = "0.3.9"
protobuf-src = "1.1.0"
tonic-build = "0.12.3"
vergen = { version = "9.0.1", features = ["build", "rustc"] }

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"