[package]
name = "solana-account-info"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "solana_account_info"
path = "src/lib.rs"

[dependencies]
bincode = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
solana-program-error = { workspace = true }
solana-program-memory= { workspace = true }
solana-pubkey = { workspace = true, default-features = false }

[features]
bincode = ["dep:bincode", "dep:serde"]
