[package]
name = "solana-account"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "solana_account"
path = "src/lib.rs"

[dependencies]
bincode = { workspace = true ,optional = true }
qualifier_attr = { workspace = true, optional = true, default-features = false }
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-account-info = { workspace = true }
solana-clock = { workspace = true }
solana-frozen-abi = { workspace = true, optional = true }
solana-frozen-abi-macro = { workspace = true, optional = true }
solana-instruction = { workspace = true, default-features = false }
solana-logger = { workspace = true, optional = true }
solana-pubkey = { workspace = true, default-features = false }
solana-sdk-ids = { workspace = true }
solana-sysvar = { workspace = true, features = ["bincode"], optional = true }

[dev-dependencies]

[features]
bincode = [
    "dep:bincode",
    "dep:solana-sysvar",
    "solana-instruction/serde",
    "serde",
]
dev-context-only-utils = ["bincode", "dep:qualifier_attr"]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "dep:solana-logger",
    "solana-pubkey/frozen-abi",
]
serde = [
    "dep:serde",
    "dep:serde_bytes",
    "dep:serde_derive",
    "solana-pubkey/serde",
]
