[package]
name = "solana-address-lookup-table-interface"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "solana_address_lookup_table_interface"
path = "src/lib.rs"

[dependencies]
bincode = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-clock = { workspace = true }
solana-frozen-abi = { workspace = true, features = [
    "frozen-abi",
], optional = true }
solana-frozen-abi-macro = { workspace = true, features = [
    "frozen-abi",
], optional = true }
solana-instruction = { workspace = true, features = ["std"], optional = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-slot-hashes = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-pubkey = { workspace = true, features = ["curve25519"] }

[dev-dependencies]
solana-address-lookup-table-interface = { path = ".", features = [
    "dev-context-only-utils",
] }
solana-hash = { workspace = true }

[features]
bincode = [
    "dep:bincode",
    "dep:solana-instruction",
    "serde",
    "solana-instruction/bincode",
]
bytemuck = ["dep:bytemuck", "solana-pubkey/bytemuck"]
dev-context-only-utils = ["bincode", "bytemuck"]
frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro", "serde"]
serde = ["dep:serde", "dep:serde_derive", "solana-pubkey/serde"]

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
