[package]
name = "solana-atomic-u64"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[target.'cfg(not(target_pointer_width = "64"))'.dependencies]
parking_lot = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
