[package]
name = "solana-bincode"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "solana_bincode"
path = "src/lib.rs"

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
solana-instruction = { workspace = true, default-features = false, features = [
    "std",
] }

[dev-dependencies]
#solana-system-interface = { workspace = true, features = ["bincode"] }

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
